--- a/package.json
+++ b/package.json
@@ -1,24 +1,39 @@
 {
   "name": "@psihioga/simplereacttestcomponent",
-  "version": "0.0.1",
+  "version": "0.0.4",
   "description": "simple react components lib",
   "publishConfig": {
     "registry": "https://npm.pkg.github.com/psihioga"
   },
   "scripts": {
-    "rollup": "rollup -c --bundleConfigAsCjs"
+    "rollup": "rollup -c --bundleConfigAsCjs",
+    "tailwind": "npx tailwindcss  -i ./tailwind.css -o ./src/tailwind.css --minify",
+    "storybook": "start-storybook -p 6006",
+    "build-storybook": "build-storybook"
   },
   "author": "psihioga",
   "license": "MIT",
   "devDependencies": {
+    "@babel/core": "^7.20.12",
     "@rollup/plugin-commonjs": "^24.0.1",
     "@rollup/plugin-node-resolve": "^15.0.1",
     "@rollup/plugin-typescript": "^11.0.0",
+    "@storybook/addon-actions": "^6.5.16",
+    "@storybook/addon-essentials": "^6.5.16",
+    "@storybook/addon-interactions": "^6.5.16",
+    "@storybook/addon-links": "^6.5.16",
+    "@storybook/builder-webpack5": "^6.5.16",
+    "@storybook/manager-webpack5": "^6.5.16",
+    "@storybook/react": "^6.5.16",
+    "@storybook/testing-library": "^0.0.13",
     "@types/react": "^18.0.27",
+    "babel-loader": "^8.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "rollup": "^3.12.0",
     "rollup-plugin-dts": "^5.1.1",
+    "rollup-plugin-postcss": "^4.0.2",
+    "tailwindcss": "^3.2.4",
     "tslib": "^2.5.0",
     "typescript": "^4.9.4"
   },
